# robomaster_cv

./: .bashrc  .gitignore  .gitmodules  README.md  configure.sh  docker-compose.yml  ros2 run image_publisher image_publisher.txt  ros2 run isaac_ros_dnn_image_encoder dnn.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
aarav_package/: CMakeLists.txt  package.xml
aarav_package/src/: aarav_node.cpp
classical_filter/: classical_filter.py
docker/: Dockerfile  Dockerfile.realsense_pkg  Dockerfile.realsense_source  Dockerfile.ros2_humble  Dockerfile.tools  docker-compose-gui-nvidia.yml  docker-compose-gui.yml  docker-compose-nvidia.yml  docker-compose.yml
docker/compose_files/: docker-compose-jon.yml.example  docker-compose-pc.yml.example
docker/scripts/: build-librealsense.sh  hotplug-realsense.sh  install-realsense-dependencies.sh  setup.bash  setup.sh  workspace-entrypoint.sh
docker/udev_rules/: 99-realsense-libusb-custom.rules
install/: local_setup.sh  setup.sh
jose_pedraza_package/: CMakeLists.txt  package.xml
jose_pedraza_package/src/: jose_pedraza_node.cpp
launch/: object_log_launch.xml  realsense_launch.py
log/: latest_build  latest_test
models/: 12_1_23-87_8.onnx.REMOVED.git-id  12_1_23-87_8.plan.REMOVED.git-id  README.md  best.onnx.REMOVED.git-id  yolov8s.onnx.REMOVED.git-id  yolov8s.plan.REMOVED.git-id
models/profiling/: 12_1_23-87_8.engine.REMOVED.git-id  12_1_23-87_8_details.txt
resources/: rmna2.mp4.REMOVED.git-id
scripts/: build_image.sh  build_image_layers.sh  build_raw_image.sh  convert_latest_rosbag.sh  profile_model.sh  realsense_install.sh  record_and_convert_rosbag.sh  record_rosbag.sh  ros_install.sh  rosbag2mp4.py  run_and_rebuild_yolo_model.sh  run_dev.sh  run_image_pipeline.sh  run_image_publisher.sh  run_realsense_camera.sh  run_yolo_model.sh  save_camera_bag.sh  start.sh
scripts/utils/: print_color.sh
src/Adipu_package/: CMakeLists.txt  package.xml
src/HugoMireles_package/: CMakeLists.txt  package.xml
src/NeelPerumandla/: CMakeLists.txt  package.xml
src/arav_package/: CMakeLists.txt  package.xml
src/autonav/: CMakeLists.txt  package.xml
src/autonav/src/: autonav_node.cpp  fake_robot_publisher.cpp
src/autonavi/: CMakeLists.txt  package.xml
src/braden_package/: CMakeLists.txt  package.xml
src/chris_package/: CMakeLists.txt  package.xml
src/classical/: CMakeLists.txt  package.xml
src/classical/src/: classical.cpp
src/cvmodel_package/: CMakeLists.txt  package.xml
src/cvmodel_package/src/: cvmodel_node.cpp  video_publisher.cpp
src/daniel_patrol/: README.txt
src/detection/: CMakeLists.txt  package.xml
src/detection/src/: detection_node.cpp  video_publisher.cpp
src/deva_package/: CMakeLists.txt  package.xml
src/dji_serial/: CMakeLists.txt  package.xml
src/dji_serial/src/: ammunition_node.cpp  color_node.cpp  crc.cpp  crc.hpp  dji_serial.cpp  dji_serial_packet.hpp  health_node.cpp  pose_node.cpp  pose_packet.hpp  test_serial.cpp  turret_node.cpp
src/dominic_package/: CMakeLists.txt  package.xml
src/ethan_package/: CMakeLists.txt  package.xml
src/isaac_package/: CMakeLists.txt  package.xml
src/isaac_package/src/: isaac_node  isaac_node.cpp
src/kevin_package/: CMakeLists.txt  package.xml
src/lidar/: CMakeLists.txt  instructions.txt  package.xml
src/lidar/src/: lidar_node.cpp  lidar_plane.cpp
src/localization/: CMakeLists.txt  package.xml
src/localization/src/: localization_node.cpp
src/maemobley_package/: CMakeLists.txt  package.xml
src/messages/: README.md
src/models/: 12_1_23-87_8.plan.REMOVED.git-id
src/object-log/: ArmorPlate.cpp  ArmorPlate.cu  ArmorPlate.h  ArmorPlate.h.gch.REMOVED.git-id  BoundingBox.cpp  BoundingBox.cu  BoundingBox.h  Kalman.cu  Kalman.h  Makefile  ObjectLog.cpp  ObjectLog.cu  ObjectLog.h  Readme.md  objectlog.cpp  objectlog.h
src/object_log_msgs/: CMakeLists.txt  package.xml
src/opencv/: CMakeCache.txt  CMakeLists.txt  ClassicalFilter  ClassicalFilter.cpp  Makefile  cmake_install.cmake
src/path_planning/: CMakeLists.txt  package.xml
src/plate_detection_package/: CMakeLists.txt  package.xml
src/prajithv_package/: CMakeLists.txt  package.xml
src/preprocessing/: CMakeLists.txt  package.xml
src/preprocessing/src/: preprocessing_node.cpp
src/rami_package/: CMakeLists.txt  package.xml
src/ras_object_log/: CMakeLists.txt  package.xml
src/ras_object_log/include/object-log/: ArmorPlate.h  Kalman.h  ObjectLog.h
src/ras_object_log/scripts/: publisher_test.py
src/ras_object_log/src/: object_log.cpp
src/ras_object_log/src/object-log/: ArmorPlate.cu  ArmorPlate.h  BoundingBox.cu  BoundingBox.h  Kalman.cu  Kalman.h  Makefile  ObjectLog.cpp  ObjectLog.cu  ObjectLog.h  Readme.md  object-log-exec.o.REMOVED.git-id
src/robomaster_pkg/: CMakeLists.txt  package.xml
src/rtt/: CMakeLists.txt  package.xml
src/rtt/src/: dji_serial.cpp  dji_serial_packet.hpp  rtt.cpp  test_serial.cpp
src/sentry/: sentry.cpp
src/spi/: CMakeLists.txt  package.xml
src/spi/src/: packing_node.cpp  spi_node.cpp  unpacking_node.cpp
src/stampede_msg/: CMakeLists.txt  package.xml
src/stampede_msgs/: CMakeLists.txt  package.xml
src/target_selection/: CMakeLists.txt  package.xml
src/target_selector_pkg/: CMakeLists.txt  package.xml  target_selector_node.cpp
src/tracking/: CMakeLists.txt  package.xml
src/tracking2/: CMakeLists.txt  package.xml
src/tracking3D/: CMakeLists.txt  package.xml
src/tracking_video_node/: CMakeLists.txt  package.xml
src/uart/: CMakeLists.txt  odometry_data.msg  package.xml  turret_data.msg
src/uart/include/serial/: serial.h  v8stdint.h
src/uart/include/serial/impl/: unix.h
src/uart/include/uart/: serialib.h
src/uart/src/: serialib.cpp  simulate_uart_rx.cpp  test_pub.cpp  uart.cpp  uart_rx.cpp  uart_tx.cpp
src/uart/src/serial/: serial.cc  serialib.cpp
src/uart/src/serial/impl/: unix.cc
src/uartmsg/: CMakeLists.txt  package.xml
src/uarttest/: CMakeLists.txt  package.xml
src/visualizer/: CMakeLists.txt  (+1 more)
(+80 files in other folders)
